<resources>
    <string name="app_name" translatable="false">Lumena</string>
    <string name="lrclib_uri" translatable="false">https://lrclib.net</string>
    <string name="musicbrainz_uri" translatable="false">https://musicbrainz.org/</string>
    <string name="repo_url" translatable="false">https://github.com/gideongeny</string>
    <string name="feedback_url" translatable="false">mailto:gideongeng@gmail.com</string>
    <string name="donate_url" translatable="false">https://buymeacoffee.com/Gideongeny</string>
    <string name="back">Back</string>
    <string name="get_started">Get started</string>
    <string name="permissions">Permissions</string>
    <string name="audio">Audio</string>
    <string name="explain_audio_permission_requirement">Lumena needs it to play your wonderful music</string>
    <string name="grant_permission">Grant permission</string>
    <string name="next">Next</string>
    <string name="grant_permission_in_settings">Please, grant permission in Settings</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="track_number">Track Number</string>
    <string name="bitrate">Bitrate</string>
    <string name="album_artist">Album Artist</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="path">Path</string>
    <string name="date_modified">Date Modified</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album_artist">Unknown Album Artist</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_year">Unknown Year</string>
    <string name="unknown_track_number">Unknown Track Number</string>
    <string name="unknown_bitrate">Unknown Bitrate</string>
    <string name="unknown">Unknown</string>
    <string name="track_menu_button">Track menu button</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="sort_descending">Sort descending</string>
    <string name="track_count">Track Count</string>
    <string name="close_track_search">Close track search</string>
    <string name="track_search">Track search</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="scroll_to_current_track">Scroll to current track</string>
    <string name="close_player_sheet">Close player sheet</string>
    <string name="playback_mode_toggle">Toggle playback mode</string>
    <string name="show_lyrics">Show lyrics</string>
    <string name="set_sleep_timer">Set sleep timer</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="short_minutes">min</string>
    <string name="stop_timer">Stop</string>
    <string name="start_timer">Start</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="queue">Queue</string>
    <string name="show_queue">Show queue</string>
    <string name="track_info">Track info</string>
    <string name="close_track_info_sheet">Close track info sheet</string>
    <string name="look_for_metadata">Look for metadata</string>
    <string name="edit_manually">Edit manually</string>
    <string name="back_to_track_info">Back to track info</string>
    <string name="risks_of_metadata_editing">Risks of metadata editing</string>
    <string name="risks_of_metadata_editing_explain">Editing metadata is a powerful feature, but sometimes things can go sideways, and audio file tags might not behave as expected.\n\nWe recommend backing up your audio files before making changes — better safe than sorry!\n\nBy clicking \"Accept\", you\'re acknowledging that you\'re responsible for your files, have made the necessary backups, and understand that we can\'t be held accountable if something unexpected happens.\n\nClick \"Cancel\" if you\'d prefer not to proceed.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="album_description">Album Description</string>
    <string name="no_description">No description</string>
    <string name="back_to_info_search">Back to info search</string>
    <string name="search_menu">Info search dropdown menu</string>
    <string name="search_results_provided_by">Results provided by MusicBrainz</string>
    <string name="got_it">Got it</string>
    <string name="search_tips">Search tips</string>
    <string name="search_explain">We use the MusicBrainz API to help you find track info. You can make your searches more precise using simple filters.</string>
    <string name="quotes_explain_header">Quotes for exact matches</string>
    <string name="quotes_explain">Use quotes to find specific words or phrases:</string>
    <string name="quotes_example_1">\"4:44\"</string>
    <string name="quotes_example_2"><![CDATA[\"7 Weeks & 3 Days\"]]></string>
    <string name="field_explain_header">Search by artist or album</string>
    <string name="field_explain">You can search for a specific artist or album like this:</string>
    <string name="field_example_1">artist:\"Jay-Z\"</string>
    <string name="field_example_2">release:\"Over You\"</string>
    <string name="combine_explain_header">Combine searches</string>
    <string name="combine_explain">Use \"AND\" to connect different search terms:</string>
    <string name="combine_example">\"4:44\" AND artist:\"Jay-Z\" AND release:\"4:44\"</string>
    <string name="unknown_error_occurred">Unknown error occurred. Please try again.</string>
    <string name="query_was_corrupted">Query was corrupted. Please try again.</string>
    <string name="musicbrainz_server_error">MusicBrainz error occurred. Please try again.</string>
    <string name="musicbrainz_is_unavailable">MusicBrainz is unavailable. Please try again later.</string>
    <string name="failed_to_parse_response">Failed to parse response. Please try again.</string>
    <string name="no_internet">Looks like you\'re offline. Connect to the internet and try again.</string>
    <string name="changes">Changes</string>
    <string name="old_cover_art">Old cover art</string>
    <string name="new_cover_art">New cover art</string>
    <string name="overwrite">Overwrite</string>
    <string name="select_fields_to_overwrite">Select fields to overwrite:</string>
    <string name="metadata_change_succeed">Track info was changed successfully. Changes will take effect in a couple seconds.</string>
    <string name="important_to_know">Important to know</string>
    <string name="artwork_change_note">If the artwork for the album of this track is present on your device, it will be used regardless of the selected artwork.</string>
    <string name="cover_art_from_gallery_note">To display cover art from the gallery you may need to restart the app or device.</string>
    <string name="failed_to_load_cover_art_album_id_corrupted">Failed to load cover art. Looks like album id for this recording is corrupted.</string>
    <string name="cover_art_not_found">Unfortunately, cover art for this recording was not found.</string>
    <string name="cover_art_archive_is_unavailable">Failed to load cover art. Cover Art Archive is unavailable. Please try again later.</string>
    <string name="failed_to_load_cover_art_request_timeout">Failed to load cover art in 3 minutes. Please check network quality and try again.</string>
    <string name="write_permission_denied">Failed to overwrite metadata. Permission denied. Please try again.</string>
    <string name="no_read_permission">No read permission. Please grant it or try again.</string>
    <string name="no_write_permission">No write permission. Please grant it or try again.</string>
    <string name="failed_to_read">Failed to read file. Please try again.</string>
    <string name="failed_to_write">Failed to write file. Please try again.</string>
    <string name="edit">Edit</string>
    <string name="pick_art">Pick art</string>
    <string name="restore_art">Restore</string>
    <string name="restore_tag">Restore tag value</string>
    <string name="lyrics_control">Lyrics control</string>
    <string name="lyrics_in_tag">Lyrics in tag</string>
    <string name="lyrics_in_tag_explain">Lyrics stored in audio file tag</string>
    <string name="lyrics_in_local_database">Lyrics in local database</string>
    <string name="lyrics_in_local_database_explain">Lyrics copied from a tag, taken from LRCLIB or added from a file. This is what you see on lyrics screen</string>
    <string name="lyrics_actions">Lyrics actions</string>
    <string name="lyrics_tools_explained">Actions to manage or modify lyrics in local database</string>
    <string name="clear_db_entry">Clear DB entry</string>
    <string name="copy_from_tag">Copy from tag</string>
    <string name="import_from_file">Import from file</string>
    <string name="write_to_tag">Write to tag</string>
    <string name="fetch_from_lrclib">Fetch from LRCLIB</string>
    <string name="publish_on_lrclib">Publish on LRCLIB</string>
    <string name="unable_to_publish">Unable to publish: title, artist or album not specified.</string>
    <string name="published_successfully">Published successfully.</string>
    <string name="solving_challenge">Solving challenge...</string>
    <string name="lyrics">Lyrics</string>
    <string name="close_lyrics_sheet">Close lyrics sheet</string>
    <string name="loading_lyrics">Loading lyrics</string>
    <string name="synced">Synced</string>
    <string name="plain">Plain</string>
    <string name="cant_look_for_lyrics_title_or_artist_is_missing">Can\'t look for lyrics. Title or artist is not specified for this track.</string>
    <string name="lyrics_not_found">Unfortunately, lyrics for this track can\'t be found on LRCLIB.</string>
    <string name="cant_find_lyrics">Can\'t find lyrics.</string>
    <string name="lyrics_provided_by">Lyrics provided by LRCLIB</string>
    <string name="create_playlist">Create playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="back_to_add_to_playlist">Back to add to playlist</string>
    <string name="name">Name</string>
    <string name="new_playlist_title_placeholder">e.g. Favourites</string>
    <string name="create">Create</string>
    <string name="reorder_track">Reorder track</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_playlist_dialog_title">Delete playlist?</string>
    <string name="delete_playlist_dialog_text">This won\'t affect the tracks in it.</string>
    <string name="nothing_yet">Nothing yet.</string>
    <string name="unknown_folder">Unknown Folder</string>
    <string name="enable_list_view">Enable list view</string>
    <string name="enable_grid_view">Enable grid view</string>
    <string name="album_art">Album art</string>
    <string name="previous_track">Previous track</string>
    <string name="play">Play</string>
    <string name="next_track">Next track</string>
</resources>